# slotted

./: .gitignore  docker-compose.yml
app-services/: Dockerfile  package-lock.json  package.json
app-services/src/: index.js
app-services/src/modules/auth/: auth.controller.js  auth.repository.js  auth.routes.js  auth.service.js
app-services/src/modules/booking/: booking.controller.js  booking.repository.js  booking.routes.js  booking.service.js
app-services/src/modules/catalog/: catalog.controller.js  catalog.repository.js  catalog.routes.js  catalog.service.js  catalog.transformers.js
app-services/src/shared/: queueClient.js  redis.js
db/migrations/: v1__init_core_schema.sql  v2__add_role_to_users.sql  v3__seed_dev_data.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: EventCard.jsx  Navbar.jsx  StadiumMap.jsx
frontend/src/hooks/: useCountdown.js  useQueuePosition.js
frontend/src/pages/: BookingConfirm.jsx  EventDetail.jsx  Home.jsx  Login.jsx  PaymentSuccess.jsx  SeatSelection.jsx  Signup.jsx  WaitingRoom.jsx
frontend/src/utils/: providerMedia.js
queue-engine/: CMakeLists.txt  Dockerfile
queue-engine/include/: queue_manager.h
queue-engine/src/: main.cpp  queue_manager.cpp
queue_engine/: CMakeLists.txt
queue_engine/include/: queue_manager.h  redis_client.h
queue_engine/src/: queue_manager.cpp  redis_client.cpp
queue_engine/src/api/: routes.cpp
(+12 files in other folders)
